--- a/views/pages/canon.ejs
+++ b/views/pages/canon.ejs
@@ -25,10 +25,10 @@
     </header>
 
     <main class="text-center items-center flex flex-col">
-        <label class="input input-bordered flex items-center gap-2">
+        <div id="searchbar">
             <input type="text" class="grow" placeholder="Search" id="searchInput" />
             <img src="./images/search.png" />
-        </label>
+        </div>
         <br />
         <div class="characterContainer" id="cardContainer">
             <a href="/character?id=0">
