--- a/public/index.css
+++ b/public/index.css
@@ -1,10 +1,3 @@
-:root {
-    --primary: #00bd8b;
-    --primaryShade: #057b5c;
-    --navSelected: #4bb79a;
-    --pink: #F11EA8;
-}
-
 @font-face {
     font-family: Barbie;
     src: Arial, url("./fonts/Bartex.ttf");
@@ -43,13 +36,8 @@
     filter: drop-shadow(0.2em 0.2em 0px var(--pink));
 }
 
-.menu>li {
+.menu>a {
     font-family: Mario;
-}
-
-* {
-    margin: 0;
-    padding: 0;
 }
 
 body {
@@ -57,66 +45,12 @@ body {
 }
 
 footer {
-    /* background-image: url("./images/StripedImage.png");
-    background-size: 1%; */
-    /* background: repeating-linear-gradient(-45deg,
-            #111,
-            #111 5px,
-            #47586c 5px,
-            #47586c 12.5px); */
     font-weight: bold;
     margin-top: 1vh;
 }
 
 footer p {
     text-shadow: 0px 0px 0.4em rgba(0, 0, 0, 1);
-}
-
-/* Navbar */
-#hamburgerIcon:hover {
-    transform: rotate(-10deg);
-    background-color: oklch(var(--su));
-}
-
-#navSidebarList a:hover {
-    background-color: oklch(var(--su));
-    color: black;
-}
-
-#navHeader:hover {
-    background-color: oklch(var(--su));
-    transform: rotate(-3deg);
-}
-
-#topNav a:hover {
-    background-color: oklch(var(--su));
-    transform: rotate(-10deg);
-}
-
-#topNav a::before, #navbarPfpContainer::before, .navSelected::before, #navHeader:hover::before, #hamburgerIcon::before {
-    content: '';
-    position: absolute;
-    bottom: 20%;
-    left: 0%;
-    right: 0;
-    width: 100%;
-    height: 75%;
-    background-image: url("./images/HoverEffect.png");
-    background-position: center;
-    background-size: 100% 90%;
-    background-repeat: no-repeat;
-    opacity: 0;
-}
-
-#topNav a:hover::before, #navbarPfpContainer:hover:hover::before, .navSelected::before, #hamburgerIcon:hover:hover::before {
-    opacity: 1.0;
-    mix-blend-mode: screen;
-}
-
-#navHeader:hover::before {
-    opacity: 1.0;
-    mix-blend-mode: screen;
-    /* transform: rotate(5deg); */
 }
 
 .navLinks {
@@ -155,8 +89,8 @@ header .drawer-side {
 
 main::before {
     content: '';
-    background-image: radial-gradient(circle, transparent 75%, oklch(var(--b1))),
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 95%, oklch(var(--b1))),
+    background-image: radial-gradient(circle, transparent 75%, var(--background)),
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 95%, var(--background)),
         url("./images/Favicon.ico");
     background-size: 5%;
     opacity: 0.09;
@@ -181,12 +115,12 @@ main::after {
     height: 100%;
     width: 100%;
     z-index: -1;
-    background: linear-gradient(to right, oklch(var(--b1)) 0%, transparent 50%, oklch(var(--b1)) 100%);
+    background: linear-gradient(to right, var(--background) 0%, transparent 50%, var(--background) 100%);
 }
 
 main {
     z-index: 2;
-    min-height: 83.5vh;
+    min-height: 81vh;
     width: 100%;
     padding: 0.5%;
     position: relative;
@@ -222,24 +156,6 @@ iframe {
     border: 0;
     padding: 0.5%;
     /* Remove default iframe border */
-}
-
-#navbarPfp {
-    width: 5vw;
-    /* filter: drop-shadow(0.05em 0.05em 0px var(--pink)) drop-shadow(0.05em 0.05em 0px var(--pink)) drop-shadow(0.03em 0.03em 0px var(--pink)); */
-}
-
-#navbarPfp:hover {
-    border-radius: 25%;
-}
-
-#navbarPfpContainer:hover {
-    transform: rotate(-20deg);
-    background-color: oklch(var(--su));
-}
-
-#navbarPfpContainer {
-    transition: transform 0.3s;
 }
 
 .toastParent {
@@ -293,8 +209,8 @@ main .btn:hover {
     left: 0;
     top: 0;
     bottom: 0;
-    color: oklch(var(--er));
-    background-color: oklch(var(--sc));
+    color: var(--error);
+    background-color: var(--success);
     z-index: 100;
 }
 
