--- a/views/pages/character.ejs
+++ b/views/pages/character.ejs
@@ -25,7 +25,7 @@
     </header>
 
     <main class="text-center items-center">
-        <div class="text-center items-center">
+        <div class="text-center items-center" id="bbfContainer">
             <object data="./images/Emblem.svg" type="image/svg+xml" id="emblem">
                 <img src="./images/Emblem.svg" />
             </object>
