--- a/views/pages/investing.ejs
+++ b/views/pages/investing.ejs
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div id="stockContainer"></div>
-            <div class="alert alert-warning sm:w-3/4 md:w-3/5 lg:w-2/6 m-auto text-center">
+            <div class="alert alert-warning sm:w-75 md:w-3/5 lg:w-2/6 m-auto text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none"
                     viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -72,7 +72,7 @@
                 </svg>
                 <p>Sell value is $1 less than the buy value.</p>
             </div>
-            <div class="alert alert-warning sm:w-3/4 md:w-3/5 lg:w-2/6 m-auto text-center mt-2">
+            <div class="alert alert-warning sm:w-75 md:w-3/5 lg:w-2/6 m-auto text-center mt-2">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none"
                     viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
