--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer footer-center p-4 bg-neutral text-base-content">
+<footer class="footer center p-4 bg-neutral text-base-content">
     <aside>
         <p>Copyright © 2025 - Some rights reserved by Emperor Bob</p>
     </aside>
