--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,131 +1,80 @@
-<div class="navbar bg-success text-accent-content">
-    <!--Navbar-->
-    <div class="flex-none">
-        <div class="drawer">
-            <!--Menu Drawer-->
-            <input id="menu-drawer" type="checkbox" class="drawer-toggle" />
-            <div class="drawer-content">
-                <!--Menu/Hamburger Icon-->
-                <label for="menu-drawer" class="btn btn-square btn-ghost drawer-button" id="hamburgerIcon">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        class="inline-block w-5 h-5 stroke-current">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
-                            d="M4 6h16M4 12h16M4 18h16" stroke="white" id="hamburgerPath"></path>
-                    </svg>
-                </label>
-            </div>
-            <div class="drawer-side">
-                <label for="menu-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-                <ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content" id="navSidebarList">
-                    <!-- Sidebar content here -->
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/canon">Canon</a></li>
-                    <li><a href="/investing">Investing</a></li>
-                    <li><a href="/ocmaker">OC Maker v1</a></li>
-                    <li><a href="/ocmaker2">OC Maker v2</a></li>
-                </ul>
-            </div>
+<nav class="navbar" id="navHeader">
+    <a href="/" class="navbar-title">Broader Briefing File</a>
+    <div class="navbar-links menu" id="topNav">
+        <a href="/">Home</a>
+        <a href="/canon">Canon</a>
+        <a href="/investing">Investing</a>
+        <a href="/ocmaker">OC Maker v1</a>
+        <a href="/ocmaker2">OC Maker v2</a>
+
+        <div class="navbar-profile">
+            <img src="/images/NavbarProfilePicture.png" alt="Profile" />
         </div>
-    </div>
-    <div class="flex-1">
-        <a class="btn btn-ghost md:text-4xl text-xl" href="/" id="navHeader">Broader Briefing File</a>
-    </div>
-    <div class="flex-none navLinks hidden lg:flex">
-        <ul class="menu menu-horizontal px-1" id="topNav">
-            <li><a href="/canon" id="canonNav" class="text-xl">Canon</a></li>
-            <li><a href="/investing" id="investingNav" class="text-xl">Investing</a></li>
-            <li><a href="/ocmaker" id="ocMakerNav" class="text-xl">OC Maker v1</a></li>
-            <li><a href="/ocmaker2" id="ocMaker2Nav" class="text-xl">OC Maker v2</a></li>
-        </ul>
-    </div>
-    <div class="dropdown dropdown-end">
-        <div tabindex="0" role="button">
-            <div class="flex-none w-10 rounded-full" id="navbarPfpContainer">
-                <img alt="Tailwind CSS Navbar component" src="/images/NavbarProfilePicture.png" id="navbarPfp" />
-            </div>
-        </div>
+
         <ul tabindex="0"
             class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 text-base-content rounded-box w-52"
             id="profileDropdownList">
         </ul>
     </div>
-</div>
+</nav>
+
+<!-- Login Modal -->
 <dialog id="loginModal" class="modal">
-    <div class="modal-box flex flex-col text-center">
-        <form>
-            <h3 class="font-bold text-2xl">Login</h3>
-            <hr class="mt-1 mb-4" />
-            <label class="input input-bordered input-accent flex items-center gap-2 w-3/4 mb-2 m-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
-                    class="w-4 h-4 opacity-70">
-                    <path
-                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
-                </svg>
-                <input type="text" class="grow" placeholder="Username" id="usernameInput" autocomplete="username" />
-            </label>
-            <label class="input input-bordered input-accent flex items-center gap-2 w-3/4 mb-2 m-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
-                    class="w-4 h-4 opacity-70">
-                    <path fill-rule="evenodd"
-                        d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
-                        clip-rule="evenodd" />
-                </svg>
-                <input type="password" class="grow" placeholder="Password" id="passwordInput"
-                    autocomplete="current-password" />
-            </label>
-            <button class="btn btn-accent w-3/4 m-auto" id="modalLoginButton">Login</button>
-
-            <hr class="mt-4 mb-2" />
-            <ul class="text-left">
-                <li class="text-error" id="loginRule1">Username must be between 3 and 20 characters (inclusive)
-                </li>
-                <li class="text-error" id="loginRule2">Password must be between 6 and 30 characters (inclusive)
-                </li>
-                <li class="text-error" id="loginRule3">Username shouldn't be Profane</li>
-            </ul>
-        </form>
+    <div class="modal-container">
+        <div class="modal-box">
+            <form>
+                <h3>Login</h3>
+                <hr />
+                <label>
+                    <span>Username</span>
+                    <input type="text" id="usernameInput" placeholder="Username" autocomplete="username" />
+                </label>
+                <label>
+                    <span>Password</span>
+                    <input type="password" id="passwordInput" placeholder="Password" autocomplete="current-password" />
+                </label>
+                <button id="modalLoginButton" class="btn btn-primary">Login</button>
+                <hr />
+                <ul>
+                    <li id="loginRule1">Username must be between 3 and 20 characters</li>
+                    <li id="loginRule2">Password must be between 6 and 30 characters</li>
+                    <li id="loginRule3">Username shouldn't be Profane</li>
+                </ul>
+            </form>
+            <form method="dialog" class="modal-backdrop">
+                <button class="btn btn-error">Close</button>
+            </form>
+        </div>
     </div>
-    <form method="dialog" class="modal-backdrop" id="modalClose">
-        <button id="modalCloseButton">close</button>
-    </form>
 </dialog>
-<dialog id="registerModal" class="modal">
-    <div class="modal-box flex flex-col text-center">
-        <form>
-            <h3 class="font-bold text-2xl">Register</h3>
-            <hr class="mt-1 mb-4" />
-            <label class="input input-bordered input-accent flex items-center gap-2 w-3/4 mb-2 m-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
-                    class="w-4 h-4 opacity-70">
-                    <path
-                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
-                </svg>
-                <input type="text" class="grow" placeholder="Username" id="usernameInputRegister"
-                    autocomplete="username" />
-            </label>
-            <label class="input input-bordered input-accent flex items-center gap-2 w-3/4 mb-2 m-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
-                    class="w-4 h-4 opacity-70">
-                    <path fill-rule="evenodd"
-                        d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
-                        clip-rule="evenodd" />
-                </svg>
-                <input type="password" class="grow" placeholder="Password" id="passwordInputRegister"
-                    autocomplete="new-password" />
-            </label>
-            <button class="btn btn-accent w-3/4 m-auto" id="modalRegisterButton">Register</button>
 
-            <hr class="mt-4 mb-2" />
-            <ul class="text-left">
-                <li class="text-error" id="registerRule1">Username must be between 3 and 20 characters
-                    (inclusive)</li>
-                <li class="text-error" id="registerRule2">Password must be between 6 and 30 characters
-                    (inclusive)</li>
-                <li class="text-error" id="registerRule3">Username shouldn't be Profane</li>
-            </ul>
-        </form>
+<!-- Register Modal -->
+<dialog id="registerModal" class="modal">
+    <div class="modal-container">
+        <div class="modal-box">
+            <form>
+                <h3>Register</h3>
+                <hr />
+                <label>
+                    <span>Username</span>
+                    <input type="text" id="usernameInputRegister" placeholder="Username" autocomplete="username" />
+                </label>
+                <label>
+                    <span>Password</span>
+                    <input type="password" id="passwordInputRegister" placeholder="Password"
+                        autocomplete="new-password" />
+                </label>
+                <button id="modalRegisterButton" class="btn btn-primary">Register</button>
+                <hr />
+                <ul>
+                    <li id="registerRule1">Username must be between 3 and 20 characters</li>
+                    <li id="registerRule2">Password must be between 6 and 30 characters</li>
+                    <li id="registerRule3">Username shouldn't be Profane</li>
+                </ul>
+            </form>
+            <form method="dialog" class="modal-backdrop">
+                <button class="btn btn-error">Close</button>
+            </form>
+        </div>
     </div>
-    <form method="dialog" class="modal-backdrop" id="modalCloseRegister">
-        <button id="modalRegisterCloseButton">close</button>
-    </form>
 </dialog>
