--- a/views/pages/canon.ejs
+++ b/views/pages/canon.ejs
@@ -32,7 +32,7 @@
         <br />
         <div class="characterContainer" id="cardContainer">
             <a href="/character?id=0">
-                <char-card class="btn btn-outline btn-info">
+                <char-card class="btn btn-outline btn-primary">
                     <p class="name">Masafumi Shinoda</p>
                 </char-card>
             </a>
