--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -30,7 +30,7 @@
             <div class="hero-text">
                 <h1>Broader Briefing File</h1>
                 <p>A collection of projections by and for <i>World Trigger</i> fans.</p>
-                <a href="./canon">
+                <a href="./investing">
                     <img src="./images/startImage.png" />
                 </a>
             </div>
