--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,7 @@
     --error: #fc5252;
     --brightGray: #a6aebb;
     --light: whitesmoke;
+    --warning: rgb(170, 98, 38);
 }
 
 * {
@@ -21,9 +22,17 @@
 
 /* Positioning */
 
+.m-auto {
+  margin: auto;
+}
+
 .center {
   justify-content: center;
   text-align: center;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 .flex {
@@ -36,6 +45,20 @@
 
 .items-center {
   align-items: center;
+}
+
+.mb-1 {
+  margin-bottom: 1%;
+}
+
+.mb-2 {
+  margin-bottom: 2%;
+}
+
+.join {
+  display: inline-flex;
+  align-items: stretch;
+  border-radius: var(--rounded-btn, 0.5rem);
 }
 
 /* Colors */
@@ -106,6 +129,9 @@
   transition: background 0.15s ease, transform 0.1s ease;
   user-select: none;
   font-weight: bold;
+  border: 1px solid black;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
 .btn:hover {
@@ -133,6 +159,10 @@
 }
 
 /* Header */
+
+.navSelected {
+  text-decoration: underline !important;
+}
 
 .navbar {
   display: flex;
@@ -254,8 +284,28 @@ main {
 /* Modal */
 
 /* Modal overlay */
+dialog {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+
+  margin: 0;
+  padding: 0;
+
+  border: none;
+  border-radius: 0;
+
+  position: fixed;
+  inset: 0;
+}
+
 .modal {
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   width: 100vw !important;
   height: 100vh !important;
   background-color: transparent;
@@ -308,4 +358,39 @@ main {
   padding-left: 1rem;
   list-style: none;
   color: var(--error);
+}
+
+#profileDropdownList {
+    z-index: 5;
+    position: absolute;
+    right: 2%;
+    top: 7vh;
+    background-color: var(--background);
+    border: 1px solid var(--brightGray);
+    text-decoration: none;
+    list-style: none;
+    padding: 1%;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    gap: 16px;
+    /* display: none; */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Text Sizes */
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
