--- a/views/pages/leaderboard.ejs
+++ b/views/pages/leaderboard.ejs
@@ -25,7 +25,7 @@
     </header>
 
     <main class="text-center items-center flex flex-col">
-        <a href="/investing"><button class="btn btn-info mb-2">Investing</button></a>
+        <a href="/investing"><button class="btn btn-primary mb-2">Investing</button></a>
         <table id="leaderboardTable" class="table table-zebra">
             <tr>
                 <th>Rank</th>
