--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,12 @@
     <a href="/" class="navbar-title">Broader Briefing File</a>
     <div class="navbar-links menu" id="topNav">
         <a href="/">Home</a>
-        <a href="/canon">Canon</a>
-        <a href="/investing">Investing</a>
-        <a href="/ocmaker">OC Maker v1</a>
-        <a href="/ocmaker2">OC Maker v2</a>
+        <a href="/canon"     id="canonNav">Canon</a>
+        <a href="/investing" id="investingNav">Investing</a>
+        <a href="/ocmaker"   id="ocMakerNav">OC Maker v1</a>
+        <a href="/ocmaker2"  id="ocMaker2Nav">OC Maker v2</a>
 
-        <div class="navbar-profile">
+        <div class="navbar-profile" id="pfpIcon">
             <img src="/images/NavbarProfilePicture.png" alt="Profile" />
         </div>
 
@@ -42,7 +42,7 @@
                 </ul>
             </form>
             <form method="dialog" class="modal-backdrop">
-                <button class="btn btn-error">Close</button>
+                <button class="btn btn-error" id="modalCloseButton">Close</button>
             </form>
         </div>
     </div>
