--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,13 @@
 <nav class="navbar" id="navHeader">
+    <a id="menuBtn">☰</a>
+
     <a href="/" class="navbar-title">Broader Briefing File</a>
     <div class="navbar-links menu" id="topNav">
-        <a href="/">Home</a>
-        <a href="/canon"     id="canonNav">Canon</a>
+        <a href="/" id="homeNav">Home</a>
+        <a href="/canon" id="canonNav">Canon</a>
         <a href="/investing" id="investingNav">Investing</a>
-        <a href="/ocmaker"   id="ocMakerNav">OC Maker v1</a>
-        <a href="/ocmaker2"  id="ocMaker2Nav">OC Maker v2</a>
+        <a href="/ocmaker" id="ocMakerNav">OC Maker v1</a>
+        <a href="/ocmaker2" id="ocMaker2Nav">OC Maker v2</a>
 
         <div class="navbar-profile" id="pfpIcon">
             <img src="/images/NavbarProfilePicture.png" alt="Profile" />
@@ -78,3 +80,14 @@
         </div>
     </div>
 </dialog>
+
+
+<nav id="sideMenu" class="navbar-links menu">
+    <a href="/">Home</a>
+    <a href="/canon">Canon</a>
+    <a href="/investing">Investing</a>
+    <a href="/ocmaker">OC Maker v1</a>
+    <a href="/ocmaker2">OC Maker v2</a>
+</nav>
+
+<div id="sideMenuBG"></div>
