--- a/public/index.css
+++ b/public/index.css
@@ -16,7 +16,7 @@
     text-wrap: nowrap;
 }
 
-#navHeader, #topNav > a {
+#navHeader, #topNav > a, .menu > a {
     color: #FEFEFE;
     text-shadow:
         0.05em 0.05em 0 var(--pink),
@@ -59,6 +59,14 @@ footer p {
 
 header .drawer-side {
     z-index: 3;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 1%;
 }
 
 /* Other */
@@ -248,5 +256,38 @@ main .btn:hover {
 }
 
 #loggedInArea.blockedArea {
+    display: block;
+}
+
+#sideMenu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25vw;
+  height: 100vh;
+  background-color: var(--background);
+  color: #fff;
+  z-index: 1000;
+  display: none;
+  border: 1px solid var(--primary);
+}
+
+#sideMenu.open {
+  display: flex;
+  flex-direction: column;
+}
+
+#sideMenuBG {
+    z-index: 999;
+    background-color: #222222aa;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+#sideMenuBG.open {
     display: block;
 }
