--- a/public/query.css
+++ b/public/query.css
@@ -1,17 +1,26 @@
 @media (max-width: 575.98px) {
+    #topNav > a {
+        display: none;
+    }
 
-    /* Your CSS rules for extra small devices */
-    #navbarPfp {
-        width: 10vw !important;
-    }    
+    .navbar-title {
+        max-width: 80vw;
+    }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
-
-    /* Your CSS rules for small devices */
-    
+    #topNav > a {
+        display: none;
+    }    
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
     /* Your CSS rules for medium devices */
+    #topNav > a {
+        display: none;
+    }
+
+    .navbar-title {
+        text-wrap: wrap;
+    }
 }
