--- a/public/styles.css
+++ b/public/styles.css
@@ -173,8 +173,6 @@
   color: white;
   font-family: sans-serif;
   position: relative;
-
-  height: 8vh;
 }
 
 .navbar-title {
@@ -182,6 +180,9 @@
   font-weight: bold;
   text-decoration: none;
   color: white;
+  max-width: 80vw;
+  overflow-x: auto;
+  scrollbar-width: none;
 }
 
 .navbar-links {
@@ -193,14 +194,18 @@
   align-items: center;
 }
 
-.navbar-links a {
+#menuBtn, .navbar-links a {
   text-decoration: none;
   color: white;
   font-size: 1.3rem;
   letter-spacing: 1px;
 }
 
-.navbar-links a:hover, .navbar-title:hover, .navbar-profile img:hover {
+.navbar-title:hover {
+  text-decoration: underline;
+}
+
+#menuBtn:hover, .navbar-links a:hover, .navbar-profile img:hover {
   text-decoration: underline;
   transform: rotate(-5deg);
 }
@@ -210,7 +215,6 @@
   height: 2.5rem;
   border-radius: 50%;
   object-fit: cover;
-  
 }
 
 /* Home */
@@ -285,7 +289,7 @@ main {
 
 /* Modal overlay */
 dialog {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   max-width: 100vw;
   max-height: 100vh;
@@ -306,7 +310,7 @@ dialog {
   right: 0;
   top: 0;
   bottom: 0;
-  width: 100vw !important;
+  width: 100% !important;
   height: 100vh !important;
   background-color: transparent;
 }
