--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./index.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='./query.css'>
     <script>
         let loggedIn = <%= auth.loggedIn %>;
     </script>
@@ -42,6 +43,11 @@
         <%- include("../partials/footer"); %>
     </footer>
 
+    <script type="module">
+        document.addEventListener('DOMContentLoaded', () => {
+            document.getElementById("homeNav").classList.add("navSelected");
+        });
+    </script>
     <script src='main.js' type="module"></script>
 </body>
 
